# near-cli-rs

./: .gitignore  CHANGELOG.md  CODEOWNERS  Cargo.toml  Dockerfile  GUIDE.md  LICENSE-APACHE  LICENSE-MIT  MIGRATION_PLAN.md  README.md  build-docker.sh  dist-workspace.toml  launch-docker.sh  setup-docker.sh
.cargo/: config.toml
.github/ci/: cargo-out-dir  test-complete  ubuntu-install-packages
.github/workflows/: ci.yml  ci_.yml  code_style.yml  my-ci.yml  publish-to-npm.yml  release-plz.yml  release.yml  rust.yml  test.yml
cli-derive/: Cargo.toml
cli-derive/src/: builder.rs  clap_variant.rs  eclap.rs  internal.rs  lib.rs  parse.rs  scope.rs  types.rs  utils.rs
cli-derive/src/derive/: builder.rs  clap_variant.rs  mod.rs  parse.rs  scope.rs
cli-expr/: Cargo.toml
cli-expr/src/: consts.rs  errors.rs  impls.rs  main.rs  mock.rs  types.rs
cli-transfer/: Cargo.toml
cli-transfer/src/: main.rs
cli-validator-view/: Cargo.toml
cli-validator-view/src/: common.rs  impls.rs  main.rs
cli-view/: Cargo.toml
cli-view/src/: impls.rs  main.rs
cli-visual/: Cargo.toml
cli-visual/src/: consts.rs  impls.rs  lib.rs  prompt.rs  types.rs
cross/x86_64-unknown-linux-gnu/: Dockerfile
docs/: GUIDE.en.md  GUIDE.ru.md  NEW_GUIDE_DRAFT.en.md  NEW_NEAR_CLI_INTERFACE.md  README.en.md  README.ru.md  SHELL_HISTORY_INTEGRATION.md
extensions/: README.md
extensions/method-names/: Cargo.toml
extensions/method-names/src/: commands.rs  common.rs  consts.rs  main.rs
extensions/method-names/src/commands/: online.rs  wasm.rs
extensions/method-names/src/commands/online/: server.rs
extensions/method-names/src/commands/online/server/: block_id.rs  contract_id.rs
extensions/method-names/src/commands/online/server/block_id/: block_hash.rs  block_height.rs
extensions/method-names/src/types/: crypto_hash.rs  mod.rs
extensions/validator/: .gitignore  Cargo.toml  README.md
extensions/validator/src/: common.rs  consts.rs  epoch_mod.rs  impls.rs  main.rs
extensions/validator/src/commands/: mod.rs  proposals.rs  validators.rs
extensions/validator/src/commands/proposals/: mod.rs
extensions/validator/src/commands/proposals/operation_mode/online_mode/select_server/: mod.rs
extensions/validator/src/commands/proposals/operation_mode/online_mode/select_server/server/: mod.rs
extensions/validator/src/commands/validators/: mod.rs
extensions/validator/src/commands/validators/block_id/: mod.rs
extensions/validator/src/commands/validators/block_id/block_id_hash/: mod.rs
extensions/validator/src/commands/validators/block_id/block_id_height/: mod.rs
extensions/validator/src/commands/validators/epoch/: mod.rs
extensions/validator/src/commands/validators/operation_mode/: mod.rs
extensions/validator/src/commands/validators/operation_mode/online_mode/select_server/: mod.rs
extensions/validator/src/commands/validators/operation_mode/online_mode/select_server/server/: mod.rs
extensions/validator/src/commands/view_command/: mod.rs
extensions/validator/src/commands/view_command/view_account/: mod.rs
extensions/validator/src/commands/view_command/view_account/sender/: mod.rs
extensions/validator/src/commands/view_command/view_contract_code/contract/download_mode/: mod.rs
extensions/validator/src/commands/view_command/view_proposals/block_id/: mod.rs
extensions/validator/src/commands/view_command/view_proposals/block_id/block_id_hash/: mod.rs
extensions/validator/src/commands/view_command/view_proposals/block_id/block_id_height/: mod.rs
extensions/validator/src/commands/view_command/view_proposals/contract/download_mode/download_contract/: mod.rs
extensions/validator/src/commands/view_command/view_proposals/operation_mode/: mod.rs
extensions/validator/src/commands/view_command/view_validators/: mod.rs
extensions/validator/src/commands/view_command/view_validators/block_id/: mod.rs
extensions/validator/src/commands/view_command/view_validators/block_id/block_id_hash/: mod.rs
extensions/validator/src/commands/view_command/view_validators/block_id/block_id_height/: mod.rs
extensions/validator/src/commands/view_command/view_validators/epoch/: mod.rs
extensions/validator/src/commands/view_command/view_validators/operation_mode/: mod.rs
extensions/validator/src/commands/view_command/view_validators/operation_mode/online_mode/select_server/: mod.rs
extensions/validator/src/commands/view_command/view_validators/operation_mode/online_mode/select_server/server/: mod.rs
extensions/validator/src/types/: crypto_hash.rs  mod.rs
integration_tests/: tests.js
integration_tests/test_cases/: account_actions.js  contract_actions.js  credentials_actions.js  key_actions.js  near_actions.js
readme/: GUIDE.en.md  GUIDE.ru.md
src/: common.rs  config.rs  consts.rs  lib.rs  main.rs  ows_proposal.md  qwe.rs
src/commands/: mod.rs
src/config/: migrations.rs  mod.rs
src/construct_transaction_command/: mod.rs
src/js_command_match/: add_credentials.rs  add_key.rs  call.rs  clean.rs  constants.rs  create_account.rs  delete.rs  delete_account.rs  delete_key.rs  deploy.rs  deprecated.rs  dev_deploy.rs  evm_call.rs  evm_dev_init.rs  evm_view.rs  generate_key.rs  js.rs  keys.rs  login.rs  mod.rs  parameter_aliases.rs  proposals.rs  repl.rs  send.rs  set_api_key.rs  stake.rs  state.rs  tx_status.rs  validators.rs  view.rs  view_state.rs
src/network/: mod.rs
src/network_for_transaction/: mod.rs
src/network_view_at_block/: mod.rs
src/transaction_signature_options/: hash_compat_tests.rs  mod.rs
src/types/: account_id.rs  api_key.rs  base64_bytes.rs  base64_string.rs  bool.rs  contract_properties.rs  crypto_hash.rs  file_bytes.rs  ft_inventory.rs  ft_nft_inventory.rs  ft_properties.rs  function_names.rs  json.rs  key_type.rs  mod.rs  near_allowance.rs  near_token.rs  nonce32_bytes.rs  omni_conversions.rs  omni_transaction_helpers.rs  optional_string.rs  partial_protocol_config.rs  path_buf.rs  public_key.rs  url.rs  (+15 more)
tests/: account.rs  construct_transaction.rs  find_network_where_account_exist.rs  generate_keypair.rs  state_init_inspect.rs  tokens.rs
wix/: main.wxs
(+673 files in other folders)
