[package]
name = "near-cli-rs"
version = "0.16.1"
authors = ["FroVolod <frol_off@meta.ua>", "Near Inc <hello@nearprotocol.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
homepage = "https://near.cli.rs"
repository = "https://github.com/near/near-cli-rs"
description = "human-friendly console utility that helps to interact with NEAR Protocol from command line."

exclude = ["docs/media"]

[package.metadata.wix]
upgrade-guid = "A6432354-8256-45E3-9E10-53C117EE22B4"
path-guid = "3A5A99B6-61EC-4DFB-AA36-763EE316AF18"
license = false
eula = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "near"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
inquire = "0.7"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
smart-default = "0.7.1"
derive_more = "0.99.9"
easy-ext = "1"

reqwest = { version = "0.12", features = ["blocking", "json"] }
tokio = { version = "1.0", default-features = false, features = [
    "rt-multi-thread",
] }
futures = "0.3"
# Ad-hoc fix for compilation errors (rustls is used instead of openssl to ease the deployment avoiding the system dependency on openssl)
openssl = { version = "0.10", features = ["vendored"] }

bip39 = { version = "2.0.0", features = ["rand"] }
bs58 = "0.5"
ed25519-dalek = { version = "2", default-features = false }
hex = "0.4.2"
linked-hash-map = { version = "0.5", features = ["serde_impl"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.57"
toml = "0.8"
dirs = "5"
shellexpand = "3"
slipped10 = { version = "0.4.6" }
url = { version = "2", features = ["serde"] }
open = "5"
shell-words = "1"
cargo-util = "0.2"
indicatif = "0.17.8"
indenter = "0.3"
tracing = "0.1.40"
tracing-indicatif = "0.3.6"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

wasmparser = "0.217"

semver = { version = "1.0.4", optional = true }
self_update = { version = "0.41.0", features = [
    "archive-tar",
    "compression-flate2",
], optional = true }

color-eyre = "0.6"
thiserror = "2"

bytesize = "1.1.0"
prettytable = "0.10.0"
textwrap = "0.16.1"

near-crypto = "0.28"
near-primitives = "0.28"
near-jsonrpc-client = "0.15"
near-jsonrpc-primitives = "0.28"
near-socialdb-client = "0.9"

near-ledger = { version = "0.8.0", optional = true }

near-gas = { version = "0.3", features = [
    "serde",
    "borsh",
    "interactive-clap",
] }
near-token = { version = "0.3", features = [
    "serde",
    "borsh",
    "interactive-clap",
] }

near-abi = "0.4.2"
zstd = "0.13"

keyring = { version = "3.0.5", features = [
    "apple-native",
    "windows-native",
    "sync-secret-service",
    "vendored",
] }
interactive-clap = "0.3"
interactive-clap-derive = "0.3"

rust_decimal = "1.35.0"

[features]
default = ["ledger", "self-update"]
ledger = ["near-ledger"]
self-update = ["self_update", "semver"]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
