[package]
name = "near-cli-derive"
version = "0.1.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
darling = "0.13"
proc-macro2 = "1.0"
proc-macro-crate = "1"
syn = {version = "1", features = ["full", "fold"] }
quote = "1"

[dev-dependencies]
near-cli-visual = { path = "../cli-visual" }
