[package]
name = "near-cli-view"
version = "0.1.0"
edition = "2018"

[dependencies]
dialoguer = "0.8.0"
strum = { git = "https://github.com/frol/strum", branch = "feat/discriminants-pass-through-attributes", features = ["derive"] }
strum_macros = "0.20"
url = { version = "2", features = ["serde"] }

near-primitives = { git = "https://github.com/near/nearcore", rev="e242f71400111fe99a825fd8f5e53a82802c98b7" }

near-cli-visual = { path = "../cli-visual" }
near-cli-derive = { path = "../cli-derive" }

[dependencies.clap]
git = "https://github.com/ChaoticTempest/clap"
branch = "feat/derive-generic"
