[package]
name = "near-cli-visual"
version = "0.1.0"
edition = "2018"

[dependencies]
clap = "3.0.0-beta.2"
dialoguer = "0.8.0"
strum = { git = "https://github.com/frol/strum", branch = "feat/discriminants-pass-through-attributes", features = ["derive"] }
strum_macros = "0.20"

near-primitives = { git = "https://github.com/near/nearcore", rev="e242f71400111fe99a825fd8f5e53a82802c98b7" }
