[package]
name = "near-cli-validator"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
shell-words = "1.0.0"
color-eyre = "0.5"
strum = { git = "https://github.com/frol/strum", branch = "feat/discriminants-pass-through-attributes", features = ["derive"] }
# TODO: should we rename the repo to match lib name?
# TODO: should we call it differently? Looks like it's not realy following our naming convention. 
near-jsonrpc-client = { git = "https://github.com/near/near-jsonrpc-client-rs", rev="0f2b9f3a39aa9032c202c9e6954ea88b9426fe78" }
