[package]
# TODO: rename
name = "near-cli-validator-view"
version = "0.1.0"
edition = "2018"

[dependencies]
actix = "0.11.0-beta.2"
dialoguer = "0.8.0"
strum = { git = "https://github.com/frol/strum", branch = "feat/discriminants-pass-through-attributes", features = ["derive"] }
strum_macros = "0.20"
url = { version = "2", features = ["serde"] }
color-eyre = "0.5"

near-primitives = { git = "https://github.com/near/nearcore", rev="4306275e57edf6a918e73b2b442ffb110761a264" }
near-jsonrpc-client = { git = "https://github.com/near/near-jsonrpc-client-rs/", rev="693a639b32ad5806a3dfd6063de6d6eecfe64501" }
near-jsonrpc-primitives = { git = "https://github.com/near/nearcore", rev="4306275e57edf6a918e73b2b442ffb110761a264" }

near-cli-visual = { path = "../../cli-visual" }
near-cli-derive = { path = "../../cli-derive" }

[dependencies.clap]
git = "https://github.com/ChaoticTempest/clap"
branch = "feat/derive-generic"
